--- a/WinCorePatPranali/src/app/screens/masters/general-ledger-master/general-ledger-master-list/general-ledger-master-list.component.html
+++ b/WinCorePatPranali/src/app/screens/masters/general-ledger-master/general-ledger-master-list/general-ledger-master-list.component.html
@@ -15,21 +15,29 @@
                 <table class="mb-0 table table-striped">
                     <thead>
                         <tr>
-                            <th width="5%">#</th>
-                            <th width="20%">Name</th>
-                            <th width="20%">Group</th>
-                            <th width="20%">Type Of Account</th>
-                            <th width="20%">Interest Rate</th>
-                            <th width="15%">Actions</th>
+                            <th width="20%">Ledger Name</th>
+                            <th width="10%">Short Name</th>
+                            <th width="15%">Ledger Group</th>
+                            <th width="20%">Ledger Type</th>
+                            <th width="15%">Interest Rate</th>
+                            <th width="10%">Status</th>
+                            <th width="10%">Actions</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr *ngFor="let uiGeneralLedger of uiGeneralLedgers| paginate: { itemsPerPage: 10, currentPage: p, totalItems: total }">
-                            <th scope="row">{{uiGeneralLedger.id}}</th>
-                            <td>{{uiGeneralLedger.name}}</td>
-                            <td>{{uiGeneralLedger.glGroupName}}</td>
-                            <td>{{uiGeneralLedger.typeOfAccount}}</td>
-                            <td>{{uiGeneralLedger.interestRate}}</td>
+                            <td>{{uiGeneralLedger.glName}}</td>
+                            <td>{{uiGeneralLedger.shortDesc}}</td>
+                            <td>{{uiGeneralLedger.groupName}}</td>
+                            <td>{{uiGeneralLedger.typeName}}</td>
+                            <td>{{uiGeneralLedger.int_Rate}}</td>
+                            <td>
+                                <div class="badge"
+                                    [ngClass]="{'badge-danger': uiGeneralLedger.active === 0, 'badge-success' : uiGeneralLedger.active === 1, 'badge-warning' : uiGeneralLedger.active === ''}">
+                                    {{uiGeneralLedger.statusText}}
+                                </div>
+
+                            </td>
                             <td>
                                 <div class="widget-content-right">
                                     <button type="button" title="Edit record"
