Interest Structure Screens

--- a/WinCorePatPranali/src/app/screens/masters/gl-interest-parameter/gl-interest-parameter.component.html
+++ b/WinCorePatPranali/src/app/screens/masters/gl-interest-parameter/gl-interest-parameter.component.html
@@ -22,25 +22,25 @@
                             <button class="btn btn-info" tabindex="2" style="margin-top: 30px;"
                                 (click)="showGLInfo()">Show
                             </button>
-                            <div style="margin-left: 25px;">
+                            <!-- <div style="margin-left: 25px;">
                                 <label for="txtCode" class="">Code</label>
                                 <div class="input-group">
                                     <input tabindex="3" readonly type="text" class="form-control"
                                         formControlName="code">
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                         <div class="col-md-3 position-relative">
-                            <label for="txtCode" class="">Group</label>
+                            <label for="txtCode" class="">GL Group</label>
                             <div class="input-group">
                                 <input tabindex="4" readonly type="text" class="form-control" formControlName="group">
                             </div>
                         </div>
                         <div class="col-md-3 position-relative">
-                            <label for="txtCode" class="">Type of Account</label>
+                            <label for="txtCode" class="">GL Type</label>
                             <div class="input-group">
                                 <input tabindex="5" readonly type="text" class="form-control"
-                                    formControlName="typeOfAccount">
+                                    formControlName="glType">
                             </div>
                         </div>
                     </div>
