--- a/WinCorePatPranali/src/app/screens/masters/deposit-interest-structure/deposit-interest-structure.component.html
+++ b/WinCorePatPranali/src/app/screens/masters/deposit-interest-structure/deposit-interest-structure.component.html
@@ -8,23 +8,28 @@
                 <div class="row">
                     <div class="col-md-4 position-relative">
                         <label for="txtCode" class="">General Ledger</label>
-                        <select class="form-control" name="masterList" [(ngModel)]="generalLedgerId" tabindex="1">
+                        <!-- <select class="form-control" name="masterList" [(ngModel)]="generalLedgerId" tabindex="1">
                             <option *ngFor="let uiGeneralLedger of uiGeneralLedgers" [ngValue]="uiGeneralLedger.id">
                                 {{uiGeneralLedger.name}}
                             </option>
-                        </select>
+                        </select> -->
+
+                        <div class="input-group">
+                            <ngx-select-dropdown [config]="config" tabindex="1" [options]="uiGeneralLedgers"
+                                style="width: 100%;" [multiple]="false"
+                                [(ngModel)]="generalLedger"></ngx-select-dropdown>
+
+                        </div>
                     </div>
-                    <div class="col-md-4 position-relative form-group">
-                        <button class="btn btn-info" style="margin-top: 30px;" (click)="showSctructure()">Show Structure
-                        </button>
-                    </div>
-                </div>
-                <div class="row">
                     <div class="col-md-4 position-relative">
                         <label for="txtCode" class="">Date</label>
                         <div class="input-group">
                             <input tabindex="2" type="date" class="form-control" [(ngModel)]="interestStructureDate">
                         </div>
+                    </div>
+                    <div class="col-md-2 position-relative form-group">
+                        <button class="btn btn-info" style="margin-top: 30px;" (click)="showSctructure()">Show Structure
+                        </button>
                     </div>
                 </div>
                 <div class="divider"></div>
