--- a/WinCorePatPranali/src/app/screens/masters/loan-interest-structure/loan-interest-structure.component.html
+++ b/WinCorePatPranali/src/app/screens/masters/loan-interest-structure/loan-interest-structure.component.html
@@ -8,25 +8,34 @@
                 <div class="row" style="margin-bottom: 10px;">
                     <div class="col-md-4 position-relative">
                         <label for="txtCode" class="">General Ledger</label>
-                        <select class="form-control" name="masterList" [(ngModel)]="generalLedgerId" tabindex="2">
-                            <option *ngFor="let uiGeneralLedger of uiGeneralLedgers" [ngValue]="uiGeneralLedger.id">
-                                {{uiGeneralLedger.name}}
+                        <!-- <select class="form-control" name="masterList" [(ngModel)]="generalLedgerId" tabindex="2">
+                            <option *ngFor="let uiGeneralLedger of uiGeneralLedgers" [ngValue]="uiGeneralLedger.code">
+                                {{uiGeneralLedger.glName}}
                             </option>
-                        </select>
+                        </select> -->
+
+                        <div class="input-group">
+                            <ngx-select-dropdown [config]="config" tabindex="1" [options]="uiGeneralLedgers"
+                                style="width: 100%;" [multiple]="false"
+                                [(ngModel)]="generalLedger"></ngx-select-dropdown>
+
+                        </div>
                     </div>
-                    <div class="col-md-4 position-relative form-group">
-                        <button class="btn btn-info" style="margin-top: 30px;" (click)="showSctructure()">Show Structure
-                        </button>
-                    </div>
-                </div>
-                <div class="row" style="margin-bottom: 10px;">
                     <div class="col-md-4 position-relative">
                         <label for="txtCode" class="">Date</label>
                         <div class="input-group">
                             <input tabindex="1" type="date" class="form-control" [(ngModel)]="interestStructureDate">
                         </div>
                     </div>
-                    <div class="col-md-4 position-relative">
+                    <div class="col-md-2 position-relative form-group">
+                        <button class="btn btn-info" style="margin-top: 30px;" (click)="showSctructure()">Show Structure
+                        </button>
+                    </div>
+                    
+                </div>
+                <div class="row" style="margin-bottom: 10px;">
+                  
+                    <!-- <div class="col-md-4 position-relative">
                         <label for="txtCode" class="">Purpose from</label>
                         <div class="input-group">
                             <select class="form-control" name="masterList" [(ngModel)]="purposeToId" tabindex="2">
@@ -45,7 +54,7 @@
                                 </option>
                             </select>
                         </div>
-                    </div>
+                    </div> -->
 
                 </div>
                 <div class="divider"></div>
