Deposit account screen

--- a/WinCorePatPranali/src/app/screens/masters/bank-profile-master/bank-profile-master.component.html
+++ b/WinCorePatPranali/src/app/screens/masters/bank-profile-master/bank-profile-master.component.html
@@ -18,15 +18,15 @@
                         <label for="txtCode" class=""></label>
                     </div>
                 </div> -->
-                <ul class="body-tabs body-tabs-layout tabs-animated body-tabs-animated nav">
+                <ul class="nav nav-tabs">
                 <!-- <ul class="nav nav-justified"> -->
                     <li class="nav-item">
-                        <a role="tab" class="nav-link" id="tab-0" data-toggle="tab" href="#tab-content-0">
+                        <a role="tab" class="nav-link active" id="tab-0" data-toggle="tab" href="#tab-content-0">
                             <span>General</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a role="tab" class="nav-link active" id="tab-1" data-toggle="tab" href="#tab-content-1">
+                        <a role="tab" class="nav-link" id="tab-1" data-toggle="tab" href="#tab-content-1">
                             <span>Loan</span>
                         </a>
                     </li>
