--- a/WinCorePatPranali/src/app/app-router/app-router.component.html
+++ b/WinCorePatPranali/src/app/app-router/app-router.component.html
@@ -521,11 +521,12 @@
                             </a>
                             <ul>
                                 <li>
-                                    <a [class.mm-active]="isMenuSelected('deposit-accounts')" (click)="configClick('deposit-accounts')">
+                                    <a [class.mm-active]="isMenuSelected('account-search')" (click)="configClick('account-search')">
                                         <i class="metismenu-icon pe-7s-next-2"></i>
-                                        Deposit Accounts
+                                        Bank Accounts
                                     </a>
                                 </li>
+                                
                                 <li>
                                     <a [class.mm-active]="isMenuSelected('loan-accounts')" (click)="configClick('loan-accounts')">
                                         <i class="metismenu-icon pe-7s-back-2"></i>
