--- a/WinCorePatPranali/src/app/screens/customers/customer/customer-form/customer-form.component.html
+++ b/WinCorePatPranali/src/app/screens/customers/customer/customer-form/customer-form.component.html
@@ -40,7 +40,7 @@
                                                 <div class="col-md-6 position-relative" style="padding-left: unset;">
                                                     <label for="txtCode" class="">Customer No.</label>
                                                     <input type="text" class="form-control"
-                                                        placeholder="Customer No." readonly formControlName="customerCode">
+                                                        placeholder="" readonly formControlName="customerNumber">
                                                 </div>
                                                 <div class="col-md-6 position-relative" style="padding-right: unset;">
                                                     <label for="txtCode" class="">Title <span class="mandatory">*</span></label>
