--- a/WinCorePatPranali/src/app/screens/customers/customer/customer-search/customer-search.component.html
+++ b/WinCorePatPranali/src/app/screens/customers/customer/customer-search/customer-search.component.html
@@ -1,70 +1,52 @@
 <div class="row">
     <div class="col-lg-12">
-
+    
         <div class="main-card mb-3 card">
             <div class="card-body">
-
+    
                 <h5 class="card-title">Search customer</h5>
-                <form [formGroup]="searchForm" #form="ngForm">
-                    <div class="row">
-                        <div class="col-md-4 position-relative">
-                            <label for="txtCode" class="">Search by </label>
-                            <select class="mb-2 form-control" tabindex="1" formControlName="searchBy">
-                                <option *ngFor="let uiCustomerSearch of uiCustomerSearchBy"
-                                    [ngValue]="uiCustomerSearch.code">
-                                    {{uiCustomerSearch.name}}
-                                </option>
-                            </select>
-                        </div>
-                        <div class="col-md-4 position-relative">
-                            <label for="txtCode" class="">Search Text </label>
-                            <input tabindex="4" type="text" class="form-control" autocomplete="off"
-                              placeholder="Enter search text.."  formControlName="searchText">
-                        </div>
-
-                        <div class="col-md-4 position-relative form-group" style="float: right !important; margin-top: 30px;">
-                            <button class="btn btn-left-margin10 btn-danger" style="float: right;" tabindex="2"
-                                (click)="clear()">
-                                Clear</button>
-                            <button class="btn btn-left-margin10 btn-warning" style="float: right;" tabindex="2"
-                                (click)="addNewCustomer()"><i class="fa fa-plus"></i> Add New Customer </button>
-                            <button class="btn btn-info" style="float: right;" tabindex="2"
-                                (click)="searchCustomer()"><i class="fa fa-search"></i> Search</button>
-                        </div>
-
-                        <!-- <div class="col-md-3 position-relative">
-                            <div class="input-group">
-                                <input tabindex="4" type="text" class="form-control" placeholder="Search customer name"
-                                autocomplete="off"  formControlName="customerName">
-                            </div>
-                        </div>
-                        <div class="col-md-3 position-relative">
-                            <div class="input-group">
-                                <input tabindex="3" type="number" class="form-control"
-                                autocomplete="off" placeholder="Search customer number" formControlName="customerNumber">
-                            </div>
-                        </div>
-
-                        <div class="col-md-2 position-relative form-group">
-                            <div class="input-group">
-                                <input tabindex="5" type="text" class="form-control" placeholder="Search PAN"
-                                autocomplete="off"  formControlName="customerPAN" style="text-transform:uppercase">
-                            </div>
-                        </div>
-                        <div class="col-md-2 position-relative form-group">
-                            <div class="input-group">
-                                <input tabindex="5" type="text" class="form-control" placeholder="Search Aadhar"
-                                autocomplete="off"  formControlName="customerAadhar" style="text-transform:uppercase">
-                            </div>
-                        </div>
-                        <div class="col-md-2 position-relative">
-                            <div class="input-group">
-                                <input tabindex="5" type="text" class="form-control" placeholder="Search phone"
-                                autocomplete="off"   formControlName="customerPhone">
-                            </div>
-                        </div> -->
+                <div class="row">
+                    <div class="col-md-9">
+                        <app-cust-search (customers)="getCustomers($event)">
+                        </app-cust-search>
                     </div>
-                </form>
+                    <div class="col-md-3">
+                      
+                        <button class="btn btn-left-margin10 btn-success" style="float: right; margin-top: 30px;" tabindex="2"
+                            (click)="addNewCustomer()"><i class="fa fa-plus"></i> &nbsp; Add New Customer </button>
+                            <button class="btn btn-left-margin10 btn-warning" style="float: right; margin-top: 30px;" tabindex="2" (click)="clear()">
+                                Clear Search</button>
+                    </div>
+                </div>
+                
+                <!-- <form [formGroup]="searchForm" #form="ngForm">
+                        <div class="row">
+                            <div class="col-md-4 position-relative">
+                                <label for="txtCode" class="">Search by </label>
+                                <select class="mb-2 form-control" tabindex="1" formControlName="searchBy">
+                                    <option *ngFor="let uiCustomerSearch of uiCustomerSearchBy"
+                                        [ngValue]="uiCustomerSearch.code">
+                                        {{uiCustomerSearch.name}}
+                                    </option>
+                                </select>
+                            </div>
+                            <div class="col-md-4 position-relative">
+                                <label for="txtCode" class="">Search Text </label>
+                                <input tabindex="4" type="text" class="form-control" autocomplete="off"
+                                  placeholder="Enter search text.."  formControlName="searchText">
+                            </div>
+    
+                            <div class="col-md-4 position-relative form-group" style="float: right !important; margin-top: 30px;">
+                                <button class="btn btn-left-margin10 btn-danger" style="float: right;" tabindex="2"
+                                    (click)="clear()">
+                                    Clear</button>
+                                <button class="btn btn-left-margin10 btn-warning" style="float: right;" tabindex="2"
+                                    (click)="addNewCustomer()"><i class="fa fa-plus"></i> Add New Customer </button>
+                                <button class="btn btn-info" style="float: right;" tabindex="2"
+                                    (click)="searchCustomer()"><i class="fa fa-search"></i> Search</button>
+                            </div>
+                        </div>
+                    </form> -->
                 <div class="row" style="margin-bottom: 10px;">
                     <div class="col-lg-12">
                         <table class="mb-0 table table-striped">
@@ -82,7 +64,7 @@
                             <tbody>
                                 <tr
                                     *ngFor="let uiCustomer of uiCustomers | paginate: { itemsPerPage: 10, currentPage: p, totalItems: total }">
-                                    <th scope="row">{{uiCustomer.id}}</th>
+                                    <th scope="row">{{uiCustomer.customerCodeStr}}</th>
                                     <td>{{uiCustomer.custName}}</td>
                                     <td>{{uiCustomer.pan}}</td>
                                     <td>{{uiCustomer.aadhar}}</td>
@@ -92,7 +74,7 @@
                                             [ngClass]="{'badge-danger': uiCustomer.status==='Deleted', 'badge-success' : uiCustomer.status=== 'Active', 'badge-warning' : uiCustomer.status=== 'In-Active'}">
                                             {{uiCustomer.status}}
                                         </div>
-
+    
                                     </td>
                                     <td>
                                         <div class="widget-content-right">
@@ -119,13 +101,13 @@
                         </table>
                     </div>
                 </div>
-
+    
                 <div class="d-flex justify-content-center">
                     <pagination-controls (pageChange)="pageChangeEvent($event)"></pagination-controls>
                 </div>
             </div>
         </div>
-
+    
     </div>
 </div>
 
