--- a/WinCorePatPranali/src/app/screens/accounts/deposit-accounts/deposit-accounts.component.html
+++ b/WinCorePatPranali/src/app/screens/accounts/deposit-accounts/deposit-accounts.component.html
@@ -84,11 +84,11 @@
                             <span>Account Details</span>
                         </a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a role="tab" class="nav-link" id="tab-1" data-toggle="tab" href="#tab-content-2">
                             <span>Parameters</span>
                         </a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a role="tab" class="nav-link" id="tab-2" data-toggle="tab" href="#tab-content-3">
                             <span>Nomini Details</span>
@@ -270,7 +270,7 @@
                             </div>
                         </form>
                     </div>
-                    <div class="tab-pane tabs-animation fade" id="tab-content-2" role="tabpanel">
+                    <!-- <div class="tab-pane tabs-animation fade" id="tab-content-2" role="tabpanel">
                         <form [formGroup]="parametersForm" #form="ngForm">
                             <div class="row">
                                 <div class="col-md-12">
@@ -349,7 +349,7 @@
                                 </div>
                             </div>
                         </form>
-                    </div>
+                    </div> -->
                     <div class="tab-pane tabs-animation fade" id="tab-content-3" role="tabpanel">
                         <form [formGroup]="nominiForm" #form="ngForm">
                             <div class="row">
